parseLibrary/PythonParser.py
# Generated from Python.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "Python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'else'", "'elif'", "'if'", "'while'", 
                     "'print'", "<INVALID>", "'int'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "':'", "'('", "')'", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TAB", "TYPE_ID", "ID", 
                      "EQUAL", "INPUT", "COLON", "LEFT_PAREN", "RIGHT_PAREN", 
                      "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "WHITE_SPACE", 
                      "INTEGER" ]

    RULE_prog = 0
    RULE_else_statement = 1
    RULE_elif_statement = 2
    RULE_block_with_tab = 3
    RULE_statement_with_tab = 4
    RULE_left_value = 5
    RULE_if_statement = 6
    RULE_while_statement = 7
    RULE_print = 8
    RULE_expr = 9
    RULE_right_value = 10
    RULE_statement = 11

    ruleNames =  [ "prog", "else_statement", "elif_statement", "block_with_tab", 
                   "statement_with_tab", "left_value", "if_statement", "while_statement", 
                   "print", "expr", "right_value", "statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    TAB=6
    TYPE_ID=7
    ID=8
    EQUAL=9
    INPUT=10
    COLON=11
    LEFT_PAREN=12
    RIGHT_PAREN=13
    PLUS=14
    MINUS=15
    MULTIPLY=16
    DIVIDE=17
    WHITE_SPACE=18
    INTEGER=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def if_statement(self):
            return self.getTypedRuleContext(PythonParser.If_statementContext,0)


        def prog(self):
            return self.getTypedRuleContext(PythonParser.ProgContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(PythonParser.While_statementContext,0)


        def else_statement(self):
            return self.getTypedRuleContext(PythonParser.Else_statementContext,0)


        def elif_statement(self):
            return self.getTypedRuleContext(PythonParser.Elif_statementContext,0)


        def statement(self):
            return self.getTypedRuleContext(PythonParser.StatementContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PythonParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.match(PythonParser.EOF)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.if_statement()
                self.state = 26
                self.prog()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.while_statement()
                self.state = 29
                self.prog()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 4)
                self.state = 31
                self.else_statement()
                self.state = 32
                self.prog()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 5)
                self.state = 34
                self.elif_statement()
                self.state = 35
                self.prog()
                pass
            elif token in [5, 8]:
                self.enterOuterAlt(localctx, 6)
                self.state = 37
                self.statement()
                self.state = 38
                self.prog()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def block_with_tab(self):
            return self.getTypedRuleContext(PythonParser.Block_with_tabContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_else_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_statement" ):
                listener.enterElse_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_statement" ):
                listener.exitElse_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_statement" ):
                return visitor.visitElse_statement(self)
            else:
                return visitor.visitChildren(self)




    def else_statement(self):

        localctx = PythonParser.Else_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_else_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(PythonParser.T__0)
            self.state = 43
            self.match(PythonParser.COLON)
            self.state = 44
            self.block_with_tab()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def block_with_tab(self):
            return self.getTypedRuleContext(PythonParser.Block_with_tabContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_elif_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif_statement" ):
                listener.enterElif_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif_statement" ):
                listener.exitElif_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElif_statement" ):
                return visitor.visitElif_statement(self)
            else:
                return visitor.visitChildren(self)




    def elif_statement(self):

        localctx = PythonParser.Elif_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_elif_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(PythonParser.T__1)
            self.state = 47
            self.expr(0)
            self.state = 48
            self.match(PythonParser.COLON)
            self.state = 49
            self.block_with_tab()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_with_tabContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_with_tab(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Statement_with_tabContext)
            else:
                return self.getTypedRuleContext(PythonParser.Statement_with_tabContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_block_with_tab

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_with_tab" ):
                listener.enterBlock_with_tab(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_with_tab" ):
                listener.exitBlock_with_tab(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_with_tab" ):
                return visitor.visitBlock_with_tab(self)
            else:
                return visitor.visitChildren(self)




    def block_with_tab(self):

        localctx = PythonParser.Block_with_tabContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block_with_tab)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 51
                    self.statement_with_tab()

                else:
                    raise NoViableAltException(self)
                self.state = 54 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_with_tabContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(PythonParser.StatementContext,0)


        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.TAB)
            else:
                return self.getToken(PythonParser.TAB, i)

        def getRuleIndex(self):
            return PythonParser.RULE_statement_with_tab

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_with_tab" ):
                listener.enterStatement_with_tab(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_with_tab" ):
                listener.exitStatement_with_tab(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_with_tab" ):
                return visitor.visitStatement_with_tab(self)
            else:
                return visitor.visitChildren(self)




    def statement_with_tab(self):

        localctx = PythonParser.Statement_with_tabContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement_with_tab)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 56
                self.match(PythonParser.TAB)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Left_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_left_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeft_value" ):
                listener.enterLeft_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeft_value" ):
                listener.exitLeft_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeft_value" ):
                return visitor.visitLeft_value(self)
            else:
                return visitor.visitChildren(self)




    def left_value(self):

        localctx = PythonParser.Left_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_left_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(PythonParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def block_with_tab(self):
            return self.getTypedRuleContext(PythonParser.Block_with_tabContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = PythonParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(PythonParser.T__2)
            self.state = 67
            self.expr(0)
            self.state = 68
            self.match(PythonParser.COLON)
            self.state = 69
            self.block_with_tab()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)

        def block_with_tab(self):
            return self.getTypedRuleContext(PythonParser.Block_with_tabContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)




    def while_statement(self):

        localctx = PythonParser.While_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(PythonParser.T__3)
            self.state = 72
            self.expr(0)
            self.state = 73
            self.match(PythonParser.COLON)
            self.state = 74
            self.block_with_tab()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(PythonParser.LEFT_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def RIGHT_PAREN(self):
            return self.getToken(PythonParser.RIGHT_PAREN, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = PythonParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(PythonParser.T__4)
            self.state = 77
            self.match(PythonParser.LEFT_PAREN)
            self.state = 78
            self.expr(0)
            self.state = 79
            self.match(PythonParser.RIGHT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(PythonParser.INTEGER, 0)

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def LEFT_PAREN(self):
            return self.getToken(PythonParser.LEFT_PAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def RIGHT_PAREN(self):
            return self.getToken(PythonParser.RIGHT_PAREN, 0)

        def MULTIPLY(self):
            return self.getToken(PythonParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(PythonParser.DIVIDE, 0)

        def PLUS(self):
            return self.getToken(PythonParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PythonParser.MINUS, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.state = 82
                self.match(PythonParser.INTEGER)
                pass
            elif token in [8]:
                self.state = 83
                self.match(PythonParser.ID)
                pass
            elif token in [12]:
                self.state = 84
                self.match(PythonParser.LEFT_PAREN)
                self.state = 85
                self.expr(0)
                self.state = 86
                self.match(PythonParser.RIGHT_PAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 96
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = PythonParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 90
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 91
                        _la = self._input.LA(1)
                        if not(_la==16 or _la==17):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 92
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = PythonParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 93
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 94
                        _la = self._input.LA(1)
                        if not(_la==14 or _la==15):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 95
                        self.expr(5)
                        pass

             
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Right_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(PythonParser.INPUT, 0)

        def TYPE_ID(self):
            return self.getToken(PythonParser.TYPE_ID, 0)

        def LEFT_PAREN(self):
            return self.getToken(PythonParser.LEFT_PAREN, 0)

        def right_value(self):
            return self.getTypedRuleContext(PythonParser.Right_valueContext,0)


        def RIGHT_PAREN(self):
            return self.getToken(PythonParser.RIGHT_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_right_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRight_value" ):
                listener.enterRight_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRight_value" ):
                listener.exitRight_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRight_value" ):
                return visitor.visitRight_value(self)
            else:
                return visitor.visitChildren(self)




    def right_value(self):

        localctx = PythonParser.Right_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_right_value)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(PythonParser.INPUT)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(PythonParser.TYPE_ID)
                self.state = 103
                self.match(PythonParser.LEFT_PAREN)
                self.state = 104
                self.right_value()
                self.state = 105
                self.match(PythonParser.RIGHT_PAREN)
                pass
            elif token in [8, 12, 19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def left_value(self):
            return self.getTypedRuleContext(PythonParser.Left_valueContext,0)


        def EQUAL(self):
            return self.getToken(PythonParser.EQUAL, 0)

        def right_value(self):
            return self.getTypedRuleContext(PythonParser.Right_valueContext,0)


        def print_(self):
            return self.getTypedRuleContext(PythonParser.PrintContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.left_value()
                self.state = 111
                self.match(PythonParser.EQUAL)
                self.state = 112
                self.right_value()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.print_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         




